--- a/CRUD/index.html
+++ b/CRUD/index.html
@@ -13,42 +13,63 @@
   </head>
   <body>
     <div class="container">
-      <form>
-        <div class="form-group">
-          <label for="fname">First Name</label>
-          <input type="text" class="form-control" id="fname" />
+      <div class="row">
+        <div class="col-md-4">
+          <form>
+            <div class="form-group">
+              <label for="fname">First Name</label>
+              <input type="text" class="form-control" id="fname" />
+            </div>
+
+            <div class="form-group">
+              <label for="lname">Last Name</label>
+              <input type="text" class="form-control" id="lname" />
+            </div>
+
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="email" />
+            </div>
+
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="addUser()"
+              id="submit"
+            >
+              Submit
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="updateUser()"
+              style="display: none;"
+              id="update"
+            >
+              Update
+            </button>
+          </form>
         </div>
-
-        <div class="form-group">
-          <label for="lname">Last Name</label>
-          <input type="text" class="form-control" id="lname" />
+        <div class="col-md-8">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>First</th>
+                <th>Last</th>
+                <th>Email</th>
+                <th>ID</th>
+                <th>Edit</th>
+                <th>Delete</th>
+              </tr>
+            </thead>
+            <tbody id="myUsers"></tbody>
+          </table>
         </div>
-
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="email" />
-        </div>
-
-        <button type="button" class="btn btn-primary" onclick="addUser()">
-          Submit
-        </button>
-      </form>
-
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>First</th>
-            <th>Last</th>
-            <th>Email</th>
-            <th>ID</th>
-            <th>Edit</th>
-            <th>Delete</th>
-          </tr>
-        </thead>
-        <tbody id="myUsers"></tbody>
-      </table>
+      </div>
     </div>
     <script src="create.js"></script>
     <script src="read.js"></script>
+    <script src="edit.js"></script>
+    <script src="delete.js"></script>
   </body>
 </html>
